data/derived/fa15/progs/unify/prog2950.ml.out
Characters 188-218:
  | Average(a, b)       -> ((eval(a, x, y) +. eval(b,x,y))/2.0)
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
